--- a/CSS-GRID/griddisplay.css
+++ b/CSS-GRID/griddisplay.css
@@ -1,7 +1,39 @@
 .container{
+    /* se eu quiser mudar alguma coisa dentro tem que ir no container */
     display: grid;
-    grid-template-columns: 30px 30px 30px;
+    grid-template-areas: "cabecalho cabecalho"
+     "lateral conteudo"
+     "rodape rodape";
+     /* isso vai dentro da caixinha */
+    grid-template-columns: 30% 60%;
     /* fiz 3 colunas , template cria 3 colunas automaticas*/
-    grid-template-rows: 30px 30px 30px;
+    grid-template-rows: 30px 80px 30px;
     /* fiz linhas */
+    text-align: center;
+    gap: 20px 50px;
+    /* (row columns) no mesmo lugar */
+    justify-items: center;
+    /* stretch: estica os items horizontalmente para preencher a célula
+    start inicia a esquerda
+    end inicia da direita 
+    center centraliza tudo */
+    align-items: center;
 }
+
+.cabecalho{
+    grid-area: cabecalho;
+    border: 1px solid;
+}
+.lateral{
+    grid-area: lateral;
+    border: 1px solid;
+}
+.conteudo{
+    grid-area: conteudo;
+    border: 1px solid;
+}
+.rodape{
+    grid-area: rodape;
+    border: 1px solid;
+}
+
